# watershed_alg_cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  install-dependacies.sh
include/controller/: Controller.hpp  ImageController.hpp
include/model/: AppData.hpp  ImageData.hpp
include/service/: ImageLoader.hpp  ImageService.hpp  image_loader.hpp  image_service.hpp
libs/shared/sfml/lib/: libsfml-audio.so.2.6.1  libsfml-graphics.so.2.6.1  libsfml-network.so.2.6.1  libsfml-system.so.2.6.1  libsfml-window.so.2.6.1
src/: Main.cpp
src/controller/: Controller.cpp
src/model/: AppData.cpp  ImageData.cpp
src/service/: ImageLoader.cpp  ImageService.cpp  image_loader.cpp  image_service.cpp
